@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "March 2013" "smp_utils\-0.98" SMP_UTILS
+.TH SMP_UTILS "8" "May 2013" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
