@@ -2,7 +2,7 @@ smp-utils (0.98-0.1) unstable; urgency=low
 
   * switch binaries back to /usr/bin (or /usr/local/bin)
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 18 Mar 2013 12:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 10 May 2013 21:00:00 -0400
 
 smp-utils (0.97-0.1) unstable; urgency=low
 
